Fix results screen sizing issues on safari

--- a/src/components/ResultsScreen.css
+++ b/src/components/ResultsScreen.css
@@ -16,6 +16,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  min-height: 0;
   padding: 1vh 1vh;
   box-sizing: border-box;
   overflow-y: clip;
